adapted build.gradle