@@ -45,14 +45,23 @@ dependencies {
     implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:2.13.1'
 
     implementation('org.jgrapht:jgrapht-core:1.5.1')
-
     testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
     testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
     testImplementation('org.mockito:mockito-core:4.3.1')
+    testImplementation (group: 'org.testfx', name: 'testfx-junit5', version: '4.0.15-alpha')
+    testImplementation ("org.testfx:openjfx-monocle:jdk-12.0.1+2")
 }
 
 test {
     useJUnitPlatform()
+    testLogging {
+        events "passed", "skipped", "failed"
+    }
+    //Options for TestFX
+    jvmArgs = [
+            '--add-opens', "$moduleName/com.sample.foo=org.testfx.junit5",
+            '--add-opens', 'javafx.graphics/com.sun.javafx.application=org.testfx'
+    ]
     finalizedBy jacocoTestReport
 }
 
